--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -124,7 +124,7 @@
 								<i class="fa fa-calendar" aria-hidden="true"></i>
 							</div><!-- /.rectangle -->
 							<h3>2015</h3>
-							<p>jshvuvhekhvndl:bnsblk lnvndvljnld:v, lkjvnmojvdljvldmbkjbmlj</p>
+							<p>En 2015, après avoir effectué un BTS Commerce International au lycée Lapérouse, j'ai choisi d'intégrer directement le monde professionnel. J'ai entamé ma carrière en tant que vendeur polyvalent dans diverses entreprises. Mon parcours a commencé avec l'As de Trèfle, une entreprise calédonienne spécialisée dans la distribution de produits de papeterie, bureautique, beaux-arts, informatiques et de maroquinerie. À partir de 2017, j'ai poursuivi mon expérience chez Billabong Nouméa, une enseigne spécialisée dans le prêt-à-porter et la commercialisation de produits de surf. Durant cette période, je cherchais encore ma voie professionnelle. Ce dont j'étais certain, c'est que mon futur poste devait réunir mes principales qualités : un sens aigu du relationnel, une grande capacité d'adaptation et la volonté de répondre aux besoins d'autrui.</p>
 						</div><!-- /.main-service -->
                         <div class="main-service text-right">
                             <div class="rectangle">
