--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@ f<!DOCTYPE html>
                                 <i class="fa fa-comments" aria-hidden="true"></i>
                             </div>
                             <h3>2019</h3>
-                            <p>kjkhkvndfhbkbkbdbkbjb;kjblnbd clshvdkbn lhjbvklnbklnsdk;bndbv nlivhndlndbkndf</p>
+                            <p>En octobre 2019, alors que je prenais une pause professionnelle pour réfléchir à ma carrière, j'ai reçu un appel de la Responsable du Bureau des achats publics de la Nouvelle-Calédonie. Elle m'a informé que son bureau recherchait un Approvisionneur des achats publics et qu'ils étaient intéressés par mon profil pour un entretien d'embauche. Lors de cet entretien, il est apparu que mon acquis dans la vente était un atout majeur et que mon intérêt pour les achats, malgré mon manque de pratique dans ce domaine, était perçu comme une opportunité pour une formation en interne.
+                                C'est ainsi que j'ai poursuivi mon apprentissage dans la fonction publique, avec des missions visant à répondre directement ou indirectement aux besoins des services publics dans l'intérêt général de la population. Au fil des différents postes occupés, j'ai développé des compétences variées. Les aspects commerciaux, juridiques, réglementaires, administratifs et, en particulier, les achats ont renforcé mon intérêt pour le métier d'acheteur public,faisant office de carrière professionnelle.
+                                </p>
                         </div><!-- /.main-service -->
 					</div>
 					<div class="col-sm-4">
@@ -145,14 +147,19 @@ f<!DOCTYPE html>
                                 <i class="fa fa-check" aria-hidden="true"></i>
                             </div>
                             <h3>2022</h3>
-                            <p>kjbcvkzqflknv lhvohvnkljnkvj lhsvjvihvlk mihsvoijvojviojdf.</p>
+                            <p>En 2022, occupant le poste d'assistant administratif au bureau des marchés publics de la Province Nord, j'ai réalisé que sans qualifications supplémentaires, il serait difficile de progresser dans ma carrière. Après avoir évalué mes objectifs personnels et professionnels, il est devenu évident qu'un projet de reprise d'études était la solution adéquate.
+                                La première étape a été d'intégrer le programme GIP Cadres Avenir, un dispositif calédonien visant à accompagner des professionnels du territoire dans divers secteurs dits "prioritaires" en finançant leur projet de reprise d'études en Métropole. La seconde étape consistait à intégrer l'année spécialisée "PASS'BUT" au département Techniques de Commercialisation de l'IUT de Bordeaux. Ce programme vise à consolider mes acquis sur les différentes étapes de la commercialisation d'un bien ou d'un service : de l'étude de marché à la vente, en passant par la stratégie marketing, la communication commerciale, la négociation et la relation client.
+                                </p>
                         </div><!-- /.main-service -->
 						<div class="main-service text-left">
 							<div class="rectangle">
 								<i class="fa fa-list" aria-hidden="true"></i>
 							</div><!-- /.rectangle -->
 							<h3>2024...</h3>
-							<p>Devenir acheteur public</p>
+							<p>En septembre 2023, j'ai pris une décision stratégique pour me démarquer de mes futurs concurrents sur le marché de l'emploi calédonien. Après avoir validé mon année spéciale,  j'ai choisi de me spécialiser dans le parcours Marketing Digital, E-business et Entrepreneuriat. Ce choix visait à acquérir des compétences spécifiques telles que la conduite d'actions marketing, la vente et la communication sur une offre commerciale, la gestion d'une activité digitale et le développement d'un projet e-business.
+                                Pour allier formation académique et expérience professionnelle, j'ai intégré en parallèle le poste d'apprenti à l'Unité des Achats et Marchés Publics (UAMP) de la Direction Interrégionale des Services Pénitentiaires de Bordeaux. Cette collaboration m'a permis de réaliser une étude sur l'intégration des outils digitaux pour améliorer la performance du processus d'achats publics de l'UAMP et de ses parties prenantes. Cette étude a servi de mémoire de fin d'année, que je soutiendrai le jeudi 20 juin 2024 en vue de l'obtention de mon diplôme.
+                                Fort de cet ensemble de savoir- faire, je suis convaincu que cela répond parfaitement à mon objectif initial de devenir acheteur public. De plus, dans une démarche de développement continu, j'ai eu l'opportunité d'intégrer l'École Supérieure d'Acheteur Professionnel (ESAP) de Bordeaux à la rentrée de septembre 2024 pour me spécialiser via un Master de Manager Achat & Supply Chain.
+                                </p>
 						</div><!-- /.main-service -->
 					</div>
 				</div>
