--- a/index.html
+++ b/index.html
@@ -467,14 +467,14 @@ f<!DOCTYPE html>
                         <div class="col-md-3 col-sm-4 col-xs-6" data-groups='["webdev"]'>
                             <div class="portfolio-item">
                                 <div class="portfolio-item-thumb">
-                                    <img src="assets/img/portfolio-2.jpg" alt="" class="img-res">
+                                    <img src="assets/img/Fourniture de bureau.png" alt="" class="img-res">
                                     <a href="#" class="rectangle" data-toggle="modal" data-target="#portfolioItem2">
                                         <i class="fa fa-plus"></i>
                                     </a>
                                 </div><!-- /.portfolio-item-thumb  -->
                                 <div class="portfolio-info">
-                                    <h3>Website</h3>
-                                    <p>Web Development</p>
+                                    <h3>Marchés de Fournitures courantes</h3>
+                                    <p>ahahahhahdhdhdjdkdkd</p>
                                 </div><!-- /.portfolio-info  -->
                             </div>
                         </div><!-- /.col-md-3  -->
