--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@ f<!DOCTYPE html>
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="rectangle" data-dismiss="modal"><i class="fa fa-times"></i></a>
-                    <img class="img-res" src="assets/img/portfolio-2.jpg" alt="">
+                    <img class="img-res" src="assets/img/Fourniture de mobilier.png" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Project title</h4>
