--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@ f<!DOCTYPE html>
 </head>
 
  <!-- History section --> 
- <section class="section-history" id="history">
+ <section class="section-history" id="Expériences">
     <div class="container">          
         <div class="text-center section-diff-title">     
             <h2>A Look Back At Our History</h2>
