--- a/index.html
+++ b/index.html
@@ -699,6 +699,12 @@ f<!DOCTYPE html>
                         </div><!-- /.timeline-panel -->
                     </li><!-- /.timeline-inverted -->
 
+                      <!-- Timeline badge --> 
+                      <li class="timeline-start">
+                        <div class="rectangle"><span>2017</span></div>
+                    </li><!-- /.timeline-start -->
+
+
                     <!-- Timeline job & description  --> 
                     <li>
                         <div class="rectangle timeline-rectangle"></div>
