--- a/index.html
+++ b/index.html
@@ -638,13 +638,18 @@ f<!DOCTYPE html>
     </style>
 </head>
 
- <!-- History section --> 
-        <section class="section-history" id="Expériences">
-            <div class="container">          
-                <div class="text-center section-diff-title">     
-                    <h2>A Look Back At Our History</h2>
-                    <p>This my Education and Experience</p>
-                </div> 
+<!-- History section --> 
+<section class="section-history" id="Expériences">
+    <div class="container">          
+        <div class="text-center section-diff-title">     
+            <h2>A Look Back At Our History</h2>
+            <p>This is my Education and Experience</p>
+        </div>
+    </div>
+</section>
+
+
+                
                 <!-- Timeline --> 
                 <ul class="timeline">
                     <!-- Timeline badge --> 
