--- a/index.html
+++ b/index.html
@@ -599,6 +599,17 @@ f<!DOCTYPE html>
         <!-- End Twitter section --> 
 
         <!-- Contacts section --> 
+        <!-- Contacts section --> 
+        <section class="site-section section-contact" id="contact">
+            <div class="container">
+                <h2>Contactez-moi/h2>
+                <p class="section-subtitle"><span>Informations utiles</span></p>
+                <div class="row">
+                   
+                </div>
+            </div>
+        </section><!-- /.section-contact-->
+        <!-- End Contacts section --> 
         <!DOCTYPE html>
 <html lang="fr">
 <head>
