--- a/index.html
+++ b/index.html
@@ -602,16 +602,11 @@ f<!DOCTYPE html>
         <!-- Contacts section --> 
         <section class="site-section section-contact" id="contact">
             <div class="container">
-                <h2>Contactez-moi/h2>
+                <h2>Contactez-moi</h2>
                 <p class="section-subtitle"><span>Informations utiles</span></p>
-                <div class="row">
-                   
+                <div class="row">     
                 </div>
-            </div>
-        </section><!-- /.section-contact-->
-        <!-- End Contacts section --> 
-        <!DOCTYPE html>
-<html lang="fr">
+            
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
