--- a/index.html
+++ b/index.html
@@ -136,11 +136,22 @@ f<!DOCTYPE html>
                                 </p>
                         </div><!-- /.main-service -->
 					</div>
-					<div class="col-sm-4">
-						<div class="big-rectangle">
-							<img src="assets/img/Moncv.png" alt="">
-						</div><!-- /.big-rectangle -->
-					</div>
+					<head>
+                        <meta charset="UTF-8">
+                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                        <title>Télécharger CV</title>
+                        <style>
+                            .big-rectangle {
+                                cursor: pointer;
+                            }
+                        </style>
+                    </head>
+                    <body>
+                        <div class="col-sm-4">
+                            <div class="big-rectangle" id="download-cv">
+                                <img src="assets/CV.2024.CEDARE-WIMIAN.pdf" alt="CV">
+                            </div><!-- /.big-rectangle -->
+                        </div>
 					<div class="col-sm-4">
                         <div class="main-service text-left">
                             <div class="rectangle">
