--- a/index.html
+++ b/index.html
@@ -116,7 +116,11 @@ f<!DOCTYPE html>
 		<section class="site-section section-hello" id="intro">
 			<div class="container">
 				<h2>Dates clés</h2>
-				
+                <div class="col-sm-4">
+                    <div class="big-rectangle">
+                        <img src="assets/img/john-logo.png" alt="">
+                    </div><!-- /.big-rectangle -->
+                </div>
 				<div class="row">
 					<div class="col-sm-4">
 						<div class="main-service text-right">
@@ -136,17 +140,6 @@ f<!DOCTYPE html>
                                 </p>
                         </div><!-- /.main-service -->
 					</div>
-					<head>
-                        <meta charset="UTF-8">
-                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                        <title>Télécharger CV</title>
-                        <style>
-                            .big-rectangle {
-                                cursor: pointer;
-                            }
-                        </style>
-                    </head>
-                   
 					<div class="col-sm-4">
                         <div class="main-service text-left">
                             <div class="rectangle">
