--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ f<!DOCTYPE html>
 				<h2>Dates clés</h2>
                 <div class="col-sm-4">
                     <div class="big-rectangle">
-                        <img src="assets/img/john-logo.png" alt="">
+                        <img src="assets/img/Moncv.png" alt="">
                     </div><!-- /.big-rectangle -->
                 </div>
 				<div class="row">
