--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ f<!DOCTYPE html>
                     <div class="col-sm-4">
                         <div class="big-rectangle">
                             <img src="assets/img/Moncv.png" alt="">
+                            <a class="button center" href="assets/CV.2024.CEDARE-WIMIAN.pdf"> Clique ici pour télécharger mon CV !</a>
                         </div><!-- /.big-rectangle -->
                     </div>
 					<div class="col-sm-4">
