--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@ f<!DOCTYPE html>
                         </div><!-- /.timeline-heading -->
                         <div class="timeline-body">
                             <div class="timeline-body-thumb">
-                                <img src="assets/img/timeline-img.jpg" class="img-res" alt="">
+                                <a class="button center" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/timeline-img.jpg" class="img-res" alt="">
                             </div><!-- /.timeline-body-thumb -->
                             <p>Designing and developing a Wordpress Website</p>
                         </div><!-- /.timeline-body -->
