--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@ f<!DOCTYPE html>
                                 <p>01 OCT</p>
                             </div><!-- /.timeline-date -->
                             <div class="timeline-position">
-                                <p>Web design &amp; Development</p>
+                                <p>Apprenti Gestionnaire des achats et des marchés publics</p>
                             </div><!-- /.timeline-position -->
                         </div><!-- /.timeline-heading -->
                         <div class="timeline-body">
