--- a/index.html
+++ b/index.html
@@ -605,10 +605,11 @@ f<!DOCTYPE html>
                 <p>This my Education and Experience</p>
             </div> 
             <!-- Timeline --> 
+             
             <ul class="timeline">
                 <!-- Timeline badge --> 
                 <li class="timeline-start">
-                    <div class="rectangle"><span>2023</span></div>
+                    <div class="rectangle"><span></span></div>
                 </li><!-- /.timeline-start -->
 
                 <!-- Timeline job & description  --> 
@@ -625,7 +626,7 @@ f<!DOCTYPE html>
                         </div><!-- /.timeline-heading -->
                         <div class="timeline-body">
                             <div class="timeline-body-thumb">
-                                <a class="button center" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/timeline-img.jpg" class="img-res" alt="">
+                                <a class="button center" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/timeline-img.jpg" alt="">
                             </div><!-- /.timeline-body-thumb -->
                             <p>Designing and developing a Wordpress Website</p>
                         </div><!-- /.timeline-body -->
