--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ f<!DOCTYPE html>
                 <p>This my Education and Experience</p>
             </div> 
             <!-- Timeline --> 
-             
+
             <ul class="timeline">
                 <!-- Timeline badge --> 
                 <li class="timeline-start">
@@ -652,7 +652,7 @@ f<!DOCTYPE html>
                         </div><!-- /.timeline-heading -->
                         <div class="timeline-body">
                             <div class="timeline-body-thumb">
-                                <img src="assets/img/timeline-img.jpg" class="img-res" alt="">
+                                <a class="button center" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/mobile-development.jpg" class="img-res" alt="">
                             </div><!-- /.timeline-body-thumb -->
                             <p>Designing a solution for mobile app</p>
                         </div><!-- /.timeline-body -->
