--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@ f<!DOCTYPE html>
                         </div><!-- /.timeline-heading -->
                         <div class="timeline-body">
                             <div class="timeline-body-thumb">
-                                <a class="button center" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/mobile-development.jpg" alt="">
+                                <a class="button center" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/employee-2.jpg" alt="">
                             </div><!-- /.timeline-body-thumb -->
                             <p>Designing a solution for mobile app</p>
                         </div><!-- /.timeline-body -->
