--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ f<!DOCTYPE html>
                         </div><!-- /.timeline-heading -->
                         <div class="timeline-body">
                             <div class="timeline-body-thumb">
-                                <a class="button center" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/timeline-img.jpg" alt="">
+                                <a class="button center" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/timeline-img.jpg" alt=""></a>
                             </div><!-- /.timeline-body-thumb -->
                             <p>Designing and developing a Wordpress Website</p>
                         </div><!-- /.timeline-body -->
@@ -652,7 +652,7 @@ f<!DOCTYPE html>
                         </div><!-- /.timeline-heading -->
                         <div class="timeline-body">
                             <div class="timeline-body-thumb">
-                                <a class="button center" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/employee-2.jpg" alt="">
+                                <a class="button center" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/employee-2.jpg" alt=""></a>
                             </div><!-- /.timeline-body-thumb -->
                             <p>Designing a solution for mobile app</p>
                         </div><!-- /.timeline-body -->
@@ -673,7 +673,7 @@ f<!DOCTYPE html>
                         </div><!-- /.timeline-heading -->
                         <div class="timeline-body">
                             <div class="timeline-body-thumb">
-                                <a class="image" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/employee-1.jpg" alt="">
+                                <a class="image" href="assets/CV.2024.CEDARE-WIMIAN.pdf"><img src="assets/img/employee-1.jpg" alt=""></a>
                             </div><!-- /.timeline-body-thumb -->
                             <p>SEO optimizing a couple of websites</p>
                         </div><!-- /.timeline-body -->
